name:                xhb-ewmh
version:             0.1.0.0
synopsis:            EWMH utilities for XHB
description:         EWMH utilities for XHB
license:             BSD2
license-file:        LICENSE
author:              Jochen Keil
maintainer:          Jochen Keil <jochen.keil+xhb-ewmh@gmail.com>

category:            Graphics
build-type:          Simple

cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/jotrk/xhb-ewmh.git

library
  build-depends:       base         >= 4.7  && < 4.8,
                       binary       >= 0.7  && < 0.8,
                       bytestring   >= 0.10 && < 0.11,
                       containers   >= 0.5  && < 0.6,
                       either       >= 4.3  && < 5.0,
                       mtl          >= 2.2  && < 3.0,
                       transformers >= 0.4  && < 0.5,
                       xhb          >= 0.5  && < 0.6

  exposed-modules:     Graphics.XHB.Ewmh,
                       Graphics.XHB.Ewmh.Class,
                       Graphics.XHB.Ewmh.Types

  other-extensions:    DeriveDataTypeable,
                       FlexibleContexts,
                       FlexibleInstances,
                       FunctionalDependencies,
                       GeneralizedNewtypeDeriving,
                       MultiParamTypeClasses,
                       OverlappingInstances,
                       UndecidableInstances

  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
